# jarvis

./: .env.example  .gitignore  .gitleaksignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  TODO.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.github/: dependabot.yml
config/: policy-engine-v1.json  quality-trend-baselines.json  release-channels.json
scripts/: bootstrap.sh  check.sh  check_quality_trends.py  check_release_channel.py  generate_quality_report.py  jarvis_readiness.sh  personality_ab_eval.py  release_acceptance.sh  run_autonomy_cycle_eval.py  run_eval_dataset.py  run_fault_campaign.py  run_fault_chaos.py  run_fault_profiles.sh  run_interruption_route_eval.py  run_memory_maintenance.py  run_memory_quality_eval.py  run_router_policy_eval.py  run_runtime_outcome_gate.py  run_sim_acceptance.py  run_soak_profile.py  run_trace_trajectory_eval.py  security_gate.sh  synthesize_trace_eval_dataset.py  test_fast.sh  test_fault_campaign.sh  test_fault_chaos.sh  test_faults.sh  test_personality.sh  test_sim.sh  test_sim_acceptance.sh  test_soak.sh  test_soak_campaign.sh  test_soak_extended.sh  test_soak_reliability.sh
tests/: conftest.py  test_backchannel.py  test_backup_restore.py  test_brain.py  test_config.py  test_face_tracker.py  test_hand_tracker.py  test_import_boundaries.py  test_integration.py  test_intended_query.py  test_main_audio.py  test_main_lifecycle.py  test_memory.py  test_observability.py  test_openai_tooling.py  test_operator_server.py  test_presence.py  test_red_team_safety.py  test_release_tooling.py  (+31 more)
(+288 files in other folders)
