[project]
name = "jarvis"
version = "0.1.0"
description = "Jarvis AI assistant on Reachy Mini"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "reachy-mini>=0.1.0",
    "faster-whisper>=1.1.0",
    "elevenlabs>=1.0.0",
    "silero-vad>=5.1",
    "ultralytics>=8.3.0",
    "numpy>=1.26.0",
    "sounddevice>=0.5.0",
    "scipy>=1.14.0",
    "aiohttp>=3.10.0",
    "python-dotenv>=1.0.0",
    "cryptography>=44.0.0",
    "torch>=2.0.0",
]

[project.optional-dependencies]
wireless = ["reachy-mini[wireless]"]
dev = [
    "ruff>=0.11.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jarvis"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "fast: quick unit and integration tests suitable for local iteration",
    "fault: failure-path and fault-injection focused tests",
    "slow: long-running soak or stability tests",
]
